<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/historyConfirm"
        android:title="@string/mark_as_confirmed"
        android:icon="@drawable/ic_check" />
    <item
        android:id="@+id/historyUnConfirm"
        android:title="@string/mark_as_skipped"
        android:icon="@drawable/ic_cancel" />
    <item
        android:id="@+id/historyChangeConfirmTime"
        android:title="@string/change_confirm_time"
        android:icon="@drawable/ic_time" />
    <item
        android:id="@+id/historyChangeAmount"
        android:title="@string/change_amount"
        android:icon="@drawable/ic_pill" />
    <item
        android:id="@+id/historyDelete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete" />

</menu>