<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@drawable/darker_surface"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <View style="@style/AppTheme.Widget.Handle" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/appbar_margin_vertical"
            android:layout_marginStart="@dimen/appbar_margin_horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/delete_pill"
            android:textAppearance="@style/AppTheme.Text.BodyTitle" />

    </LinearLayout>

    <LinearLayout
        android:background="?attr/colorBackgroundFloating"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:background="?attr/selectableItemBackground"
            android:checkable="true"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_delete"
            android:focusable="true"
            android:gravity="center_vertical"
            android:id="@+id/buttonPillOnly"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/delete_only_pil"
            android:textAppearance="@style/AppTheme.Text.BodyNormal" />

        <com.google.android.material.textview.MaterialTextView
            android:background="?attr/selectableItemBackground"
            android:checkable="true"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_delete_history"
            android:focusable="true"
            android:gravity="center_vertical"
            android:id="@+id/buttonPillHistory"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/delete_pill_and_history"
            android:textAppearance="@style/AppTheme.Text.BodyNormal" />

    </LinearLayout>
</LinearLayout>