<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:text="@string/set_a_reminder"
            android:textAppearance="@style/AppTheme.Text.BodyNormal"
            tools:text="Set a new reminder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:textAppearance="@style/AppTheme.Text.BodyNormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonSetTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/set_time_format"
                app:drawableStartCompat="@drawable/ic_alarm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSetTime"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:text="@string/set_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textAmount"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:textAppearance="@style/AppTheme.Text.BodyNormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/numberPickerAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1 pill"
                app:drawableStartCompat="@drawable/ic_pill" />

            <com.shawnlin.numberpicker.NumberPicker
                app:np_dividerType="underline"
                app:np_height="48dp"
                android:id="@+id/numberPickerAmount"
                android:layout_width="180dp"
                android:layout_height="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:np_max="20"
                app:np_min="1"
                app:np_orientation="horizontal"
                app:np_value="1"
                app:np_dividerColor="@color/colorPrimary"
                app:np_selectedTextColor="@color/colorPrimary"
                app:np_textColor="?attr/colorOnSurface" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/textConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:checkable="true"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/save_reminder"
            android:textAppearance="@style/AppTheme.Text.BodyNormal"
            app:drawableStartCompat="@drawable/ic_check" />

    </LinearLayout>

</layout>